# amy_dual_core_esp32

./: LICENSE  README.md  partitions.csv  sdkconfig  sdkconfig.old
main/: CMakeLists.txt  hello_world_main.c
